# harmonies-bot

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
crates/harmonies-cli/: Cargo.toml
crates/harmonies-core/: Cargo.toml
crates/harmonies-service/: Cargo.toml
crates/harmonies-service/src/: main.rs
docs/: BGA game structure.md  Bot architecture.md  Game rules.md  Implementation status.md  New chat handoff - 2026-06-06.md  Scorer validation.md  Snapshot QA.md  Training.md  cards_database.json  orion_handoff.md  weights.aggressive_denial.json  weights.baseline.json  weights.completion_heavy.json  weights.extreme.json  weights.optimized.json  weights.original.json  weights.spirit_focused.json
extension/: README.md  manifest.json  package.json
extension/src/: advisorClient.js  contentScript.js  mockAdvisor.js  normalizer.js  overlay.js  pageBridge.js  styles.css  (+1 more)
tools/: benchmark_cli.py  benchmark_search_depth.py  bga_harmonies_capture.user.js  bga_harmonies_group_inspector.user.js  build_advisor_request_fixture.py  check_advisor_request_fixtures.py  check_extension_normalizer_visible_state.js  dom_capture_to_snapshot.py  evaluate_weights.py  extension_safety_check.py  run_tuning_tournament.py  score_fixture_corpus.py  score_qa.py  service_smoke.py  snapshot_anonymizer.py  snapshot_qa.py  snapshot_qa_core.py  summarize_capture_visible_state.py  sweep_hysteresis.py  sweep_mix_match.py  sweep_params_with_force.py  sweep_root_beam.py  sweep_search_params.py  test_forced_spirit.py  train_weights.py  validate_advisor_plan_legality.py
(+38 files in other folders)
