[package]
name = "harmonies-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
harmonies-core = { path = "../harmonies-core" }
rayon = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors"] }

[lints]
workspace = true
